--- a/style.css
+++ b/style.css
@@ -182,8 +182,11 @@ img.visible {
 }
 
 #modalscore {
+    border: dotted 5px white;
+    border-radius: 30px;
+    padding: 1rem;
     font-size: 1.5rem;
-    margin: 30px 0;
+    margin: 30px 100px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.873);
 }
 
