--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ h2 {
 
 a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-size: 0.2rem;
+    color: rgb(46, 40, 40);
+    font-size: 0.7rem;
     margin-top: 0;
 }
 
@@ -175,11 +175,11 @@ img.visible {
 }
 
 #modalscore {
-    border: dotted 5px white;
+    border: dotted 7px rgb(255, 255, 255, 0.6);
     border-radius: 30px;
     padding: 1rem;
     font-size: 1.5rem;
-    margin: 30px 100px;
+    margin: 30px 130px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.873);
 }
 
