--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ a {
 
 img {
     border-radius: 20px;
+    margin: 20px 0;
 }
 
 img.visible {
@@ -66,10 +67,10 @@ img.visible {
     justify-content: center;
     align-items: center;
     background: rgb(0, 0, 0);
-    height: 200px;
-    width: 200px;
-    border-radius: 40%;
-    margin: 30px 20px 30px;
+    height: 50px;
+    width: 50px;
+    border-radius: 45%;
+    margin: 120px 80px 120px;
     pointer-events: none;
     cursor: url(knife_100x100.png), pointer;
 }
@@ -77,13 +78,16 @@ img.visible {
 .clowncircle.number {
     background-image: url(close.webp);
     background-size: cover;
-    box-shadow: inset 5px 5px 5px rgba(95, 12, 12, 0.667), 2px 2px 3px rgba(57, 6, 6, 0.856);
+    box-shadow: inset 0px 0px 13px 13px rgb(0, 0, 0);
+    transform: scale(6);
+    transition: all 0.2s;
 }
 
 .clowncircle.number.blood {
     background-image: url(blood.png);
     box-shadow: none;
-    border-radius: 30px;
+    border-radius: 10px;
+    transition: none;
 }
 
 .btn {
@@ -96,7 +100,7 @@ img.visible {
     font-family: inherit;
     font-size: 2rem;
     border-radius: 15px;
-    margin: 40px 20px 20px;
+    margin: 10px 20px 20px;
     padding: 1.5rem;
 }
 
@@ -124,8 +128,8 @@ img.visible {
     box-shadow: inset 2px 2px 2px rgba(75, 14, 14, 0.893), 3px 3px 2px rgba(30, 4, 4, 0.86);
     padding: 0.3rem;
     position: absolute;
-    top: 0.2rem;
-    right: 0.2rem;
+    top: 0.3rem;
+    right: 0.3rem;
     border-radius: 10px;
 }
 
@@ -164,7 +168,7 @@ img.visible {
     box-shadow: inset 5px 5px 10px rgba(144, 77, 77, 0.893), 5px 5px 3px rgba(95, 31, 31, 0.86);
     margin: 3rem;
     padding: 5rem;
-    border-radius: 50px;
+    border-radius: 40px;
     max-width: 700px;
     position: relative;
 }
